portfolio/style/works1.css
*{
    outline: 1px solid red;
}

#grid-layout {
    background-color: aqua;
    border: 4px solid red;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 0.5rem;
    padding: 0.5rem;
    background-color: rgb(50, 0, 0);
    aspect-ratio: 1/1;
}

body {
    min-height: 100%;
    margin: 0;
    padding: 0;
    background-image: url(../img/background_paper.jpg);
    background-size: 0%;
    background-repeat: repeat-y 100%;
}

nav {
    border: 1px solid purple;
    justify-content: center;
    display: flex;
    font-family: "alta-california", sans-serif;
    color: #fAf8f7;
    font-size: 80px;
    margin: 0px;
    background-color: #D72740;
    width: 100%;
    height: 50px;
    height: 100px;
}

nav a:link {
    translate: calc(0px -90px);
    text-decoration: none;
    color: #000000;
    padding: 0px 80px;
   
    align-items: center;
}

main {
    width: 100%;
    border: 3px solid brown;
    display: flex;  
    flex-direction: column;
}

footer {
    background-color: #D72740;
    width: 100%;
    height: 50px;
}

h1 {
    transform: translate(44px,0px);
    margin: 0;
    font-family: "alta-california", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 170px;
    color: #fAf8f7;
    display: flex;
    max-width: auto;
    height: ;
    z-index: 8;
}

.smilodons {
    margin: 0;
    display: flex;
    position: relative;
    /* background-color: rgb(68, 255, 0);  */
     filter: drop-shadow(8px 8px 10px rgba(0, 0, 0, 0.5));
    transform: translate(130px, 20px);
    rotate: 7deg;
    z-index: 10;
    max-width: auto;
    width: 723.39px;
    height: 610.04px;
    transition: transform 0.8s ease-in-out;
    animation-name: smilodons;
}


.smilodons:hover {
   transform : scale(1.1) translate(130px, 90px) rotate(-12deg);
}

.game_week {
    display: flex;
    background-color: rgb(255, 0, 255);
    transform:translate(708px,-370px);
    rotate: -6.55deg;
    box-shadow: 10px 3px 10px 5px rgba(0,0,0,0.75);
    z-index: 1;
    width: 487.33px;
    height: 634.16px;
    transition: .8s ease-in-out;
}

.game_week:hover {
    transform: scale(1.1) translate(720px,-370px) rotate(10deg);
}

.hunan_house {
    display: flex;
    background-color: rgb(255, 149, 0);
    rotate: 7.4deg;
    transform: translate(200px,-757px);
    box-shadow: 10px 3px 10px 5px rgba(0,0,0,0.75);
    z-index: 3;
    width: 540px;
    height: 715px;
    transition: .8s ease-in-out;
    animation-name: hunan_house;
}

.hunan_house:hover {
    transform: scale(1.1) translate(-30px,-657px) rotate(-10deg);
}

.type_booklet {
    display: flex;
    background-color: rgb(255, 0, 111);
    transform: translate(900px, -1000px);
    box-shadow: -10px 3px 10px 5px rgba(0,0,0,0.75);
    rotate: -8.8deg;
    z-index: 3;
    width: 502.98px;
    height: 777.34px;
    transition: .8s ease-in-out;
}

.type_booklet:hover {
    transform: scale(1.1) translate(1000px, -900px) rotate(10deg);
}

.senior_posters {
    display: flex;
    background-color: rgb(30, 0, 255);
    transform: translate(-100px, -1500px);
    rotate: 11.18deg;
    z-index: 2;
    width: 533px;
    height: 710.65px;
    transition: .8s ease-in-out;
}

.menu {
    display: none;
}

.Moblie_Works {
    display: none;
}


@media (max-width: 768px) {

    nav a:link { display: none;
        translate: calc(0px -50px);
        padding: 0px 50px;
    }

    nav {
        justify-content: left;
        font-size: 20px;
        height: 80px;
    }

    .Moblie_Works {
        color: black;
        padding: 0px 20px;
        display: block;
        font-size: 75px;
        transform: translate(0px, -12px);
    }

    h1 {
        display: none;
    }
    .smilodons {
        scale: 1.1;
        width: 350.32px;
        height: 295.43px;
        transform: translate(60px,45px);
    }

    .smilodons:hover {
        transform: scale(1.14) translate(59px, 45px) rotate(-12deg);
    }

    .game_week {
        
        width: 314.11px;
        height: 392.64px;
        transform:translate(100px,-70px);
    }

    .game_week:hover {
        transform: scale(1.1) translate(120px,-30px) rotate(10deg);
    }

    .hunan_house {
        width: 320px;
        height: 400px;
        transform: translate(60px,-140px);
    }

    .hunan_house:hover {
        transform: scale(1.1) translate(30px,-140px) rotate(-10deg);
    }
    
    .type_booklet {
        scale: 1.1;
        width: 268.84px;
        height: 415.48px;
        transform: translate(130px,-140px);
    }
    
    .type_booklet:hover {
        transform: scale(1.14) translate(130px,-140px) rotate(10deg);
    }

    .senior_posters {
        scale: 1.1;
        width: 316.05px;
        height: 421.4px;
        transform: translate(60px,-140px);
    }

    .senior_posters:hover {
        transform: scale(1.1) translate(76px,-140px) rotate(-5deg);
    }
}

